[package]
name = "risk_engine_rust_gpu"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"

[features]
default = ["cpu"]
cpu = []
# gpu = ["wgpu", "cuda"]  # Future: GPU acceleration

